Use unsigned char for bitfield instead of unsigned. https://bugs.webkit.org/show_bug.cgi?id=97447

Patch by Jonathan Liu <net147@gmail.com> on 2012-09-24
Reviewed by Andreas Kling.

Not all compilers will pad an unsigned bitfield to the smallest size.
Use unsigned char instead of unsigned to reduce padding for compilers
that pad to the underlying type.

No new tests. There is already a compile-time assertion.

* css/CSSRule.cpp:
(SameSizeAsCSSRule):
* css/CSSRule.h:
(CSSRule):

Canonical link: https://commits.webkit.org/115394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129365 268f45cc-cd09-0410-ab3c-d52691b4dbfc