Source/WebCore/css/CSSRule.cpp
@@ -40,11 +40,7 @@
 namespace WebCore {
 
 struct SameSizeAsCSSRule : public RefCounted<SameSizeAsCSSRule> {
-#if USE(JSC)
-    char bitfields;
-#else
-    unsigned bitfields;
-#endif
+    unsigned char bitfields;
     void* pointerUnion;
 };
 
